Bug fixed Project Page (More than 4 Projects lead to misalignment of Projects)

--- a/src/Components/Project/index.scss
+++ b/src/Components/Project/index.scss
@@ -26,7 +26,7 @@
     border-radius: 10px;
     border: 1px solid black;
     box-shadow: 0 0 20px 0 lightyellow;
-    max-width: calc(33% - 10px);
+    max-width: calc(25% - 63.25px);
     margin: 25px;
 
     .project-image {
